@@ -8,8 +8,6 @@ buildscript {
 }
 
 ext.junitJupiterVersion  = '5.9.2'
-apply plugin: 'application'
-applicationDefaultJvmArgs = ["-Djdk.attach.allowAttachSelf=true"]
 apply plugin: 'org.junit.platform.gradle.plugin'
 
 
